--- a/Bouquet.theme.css
+++ b/Bouquet.theme.css
@@ -32,7 +32,7 @@
 @import url("https://lavender-discord.github.io/IconsaxDiscord/theme.css");
 
 /* The RosiePink/RosieCord Styling */
-@import url('https://github.com/Nogooduser/Espresso-Discord-Theme/blob/main/themes/dark/rosiepink.css');
+@import url('https://raw.githubusercontent.com/Nogooduser/Espresso-Discord-Theme/main/themes/dark/rosiepink.css');
 
 /* Font */
 @import url('https://slippinggittys-discord-Themes.github.io/Espresso-Discord-Theme/themes/fixations/fonts/quicksand.css');
